--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               <img src="images/person-1.jpg" alt="CEO" />
             </div>
             <div class="card-info">
-              <h2>John Smith</h2>
+              <h2>Benjamin Lawson</h2>
               <h3>CEO</h3>
               <p>
                 "Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -190,7 +190,7 @@
               <img src="images/person-2.jpg" alt="Designer" />
             </div>
             <div class="card-info">
-              <h2>Ann Brown</h2>
+              <h2>Olivia Sullivan</h2>
               <h3>Designer</h3>
               <p>
                 "Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -204,7 +204,7 @@
               <img src="images/person-3.jpg" alt="Architect" />
             </div>
             <div class="card-info">
-              <h2>Mary Doe</h2>
+              <h2>Amelia Mitchell</h2>
               <h3>Architect</h3>
               <p>
                 "Lorem ipsum dolor sit amet consectetur adipisicing elit.
